--- a/submission/styles.css
+++ b/submission/styles.css
@@ -98,3 +98,35 @@
   padding-left: 10px;
   padding-right: 10px;
 }
+
+/*Header*/
+
+#header {
+  padding-left: 10px;
+  padding-right: 10px;
+  flex: 0 0 50px;
+  line-height: 50px;
+}
+.movie-info {
+  margin: 0 auto;
+  width: 200px;
+  line-height: 50px;
+  text-align: center;
+  clear: none;
+  font-weight: 600;
+}
+label {
+  line-height: 20px;
+  vertical-align: bottom;
+}
+.mssv {
+  float: left;
+}
+.switch-container {
+  float: right;
+}
+.switch-inner-container {
+  vertical-align: middle;
+  display: inline-block;
+  height: 20px;
+}
