Zoom out complete

--- a/submission/styles.css
+++ b/submission/styles.css
@@ -130,3 +130,35 @@ label {
   display: inline-block;
   height: 20px;
 }
+
+/*ImgZoomOut*/
+
+.zoom-out {
+  height: 180px;
+  flex: 1 0;
+  margin: 1px;
+  cursor: pointer;
+  position: relative;
+}
+.zoom-out img {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+}
+.img-info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform-origin: center center;
+  background-color: #181818;
+  width: 100%;
+  z-index: 2;
+}
+.img-info p {
+  margin: 0;
+  color: white;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 5px;
+  padding-top: 0;
+}
