--- a/submission/styles.css
+++ b/submission/styles.css
@@ -162,3 +162,11 @@ label {
   padding: 5px;
   padding-top: 0;
 }
+
+/*Main Content*/
+
+#main-content {
+  flex: 1 0;
+  display: flex;
+  flex-direction: column;
+}
