--- a/submission/styles.css
+++ b/submission/styles.css
@@ -170,3 +170,73 @@ label {
   display: flex;
   flex-direction: column;
 }
+
+/*Movie detail*/
+
+.movie-container {
+  margin: auto;
+  padding: 20px;
+}
+.movie-header {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 20px;
+}
+.movie-poster {
+  width: 300px;
+  height: 450px;
+  background-color: aqua;
+  object-fit: cover;
+}
+.movie-detail {
+  margin-left: 30px;
+  flex: 1;
+}
+.movie-detail h1 {
+  margin-top: 0;
+  font-weight: 600;
+}
+.genre {
+  color: #888;
+}
+.info-brief,
+.cast,
+.review {
+  margin-top: 30px;
+}
+.cast,
+.review ul {
+  list-style-type: none;
+  padding: 0;
+}
+.cast,
+.review li {
+  margin-bottom: 5px;
+}
+
+.cast li {
+  cursor: pointer;
+}
+.review strong {
+  font-style: italic;
+  font-size: 1.1em;
+}
+
+/*Nav*/
+
+#nav {
+  padding-left: 10px;
+  padding-right: 10px;
+  flex: 0 0 50px;
+  line-height: 50px;
+}
+#home {
+  float: left;
+  cursor: pointer;
+}
+.form-inline {
+  display: inline;
+}
+.search-container {
+  float: right;
+}
